@@ -73,6 +73,11 @@
       </property>
       <item>
        <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>9</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Name</string>
         </property>
@@ -106,6 +111,11 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>pxm</string>
           </property>
@@ -121,6 +131,11 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
           </property>
           <property name="text">
            <string>0.123</string>
@@ -173,6 +188,11 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="font">
+           <font>
+            <pointsize>9</pointsize>
+           </font>
+          </property>
           <property name="toolTip">
            <string>Modify this dataset in Analysis View</string>
           </property>
@@ -180,7 +200,8 @@
            <string>edit</string>
           </property>
           <property name="icon">
-           <iconset theme="tools-wizard"/>
+           <iconset theme="tools-wizard">
+            <normaloff>.</normaloff>.</iconset>
           </property>
           <property name="toolButtonStyle">
            <enum>Qt::ToolButtonTextBesideIcon</enum>
@@ -262,7 +283,8 @@
            <string>r</string>
           </property>
           <property name="icon">
-           <iconset theme="object-rows"/>
+           <iconset theme="object-rows">
+            <normaloff>.</normaloff>.</iconset>
           </property>
           <property name="autoRaise">
            <bool>true</bool>
