@@ -32,12 +32,6 @@ class MatrixFilter(QtWidgets.QWidget):
         # modify filter button
         self.toolButton_modify.clicked.connect(self.on_modify)
 
-        # reduce font size of name
-        font = self.label.font()
-        font.setPointSize(font.pointSize()-2)
-        self.label.setFont(font)
-        self.toolButton_modify.setFont(font)
-
         if state is None:
             filt = pipeline.Filter._instances[identifier]
             self.identifier = identifier
